networking/traefik-edge/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-edge
  labels:
    # Kyverno: allow system images in this namespace
    pod-security.kubernetes.io/enforce: privileged
